# mlops_course_dtu

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml
dockerfiles/: trainer.dockerfile
src/data/: data.py
src/mlops_course_dtu/data/: data.py
src/mlops_course_dtu/models/: train_model.py
src/models/: train_model.py
tests/data/: test_data.py
